refactor: Cambio de lógica para eliminar propiedades y relaciones previas en las ediciones de publicaciones, y eliminación de las queries creadas en los repositorios en favor de lógica de programación