@@ -129,9 +129,6 @@ public class AdminProductServiceImpl implements AdminProductService {
         productRepository.save(producto);
 
         // Asignamos las imagenes al producto
-        if (tipo.equals("editar")) {
-            imageRepository.deleteImagesByProductID(producto.getId());
-        }
         if (productoDTO.getUrls_imagenes() != null) {
             List<Image> imagenes = productoDTO.getUrls_imagenes().stream()
                     .map(url -> {
@@ -140,14 +137,12 @@ public class AdminProductServiceImpl implements AdminProductService {
                         imagen.setProducto(producto);
                         imageRepository.save(imagen);
                         return imagen;
-                    }).collect(Collectors.toList());
-            producto.setImagenes(imagenes);
+                    }).toList();
+            producto.getImagenes().clear();
+            producto.getImagenes().addAll(imagenes);
         }
 
         // Categorias del producto
-        if (tipo.equals("editar")) {
-            categoriesProductsRepository.deleteCatProdByProductID(producto.getId());
-        }
         if (productoDTO.getCategorias() != null) {
             List<CategoriesProducts> categorias = productoDTO.getCategorias().stream()
                     .map(catId -> {
@@ -158,14 +153,12 @@ public class AdminProductServiceImpl implements AdminProductService {
                         rel.setCategoria(categoria);
                         categoriesProductsRepository.save(rel);
                         return rel;
-                    }).collect(Collectors.toList());
-            producto.setCategorias(categorias);
+                    }).toList();
+            producto.getCategorias().clear();
+            producto.getCategorias().addAll(categorias);
         }
 
         // Cursos y carreras del producto
-        if (tipo.equals("editar")) {
-            coursesCareersProductRepository.deleteCCPByProductID(producto.getId());
-        }
         if (productoDTO.getCursos_carreras() != null) {
             List<CoursesCareersProduct> cursosCarreras = productoDTO.getCursos_carreras().stream()
                     .map(id -> {
@@ -176,8 +169,9 @@ public class AdminProductServiceImpl implements AdminProductService {
                         rel.setCurso_carrera(cursoCarrera);
                         coursesCareersProductRepository.save(rel);
                         return rel;
-                    }).collect(Collectors.toList());
-            producto.setCursos_carreras(cursosCarreras);
+                    }).toList();
+            producto.getCursos_carreras().clear();
+            producto.getCursos_carreras().addAll(cursosCarreras);
         }
 
         return producto;
